--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
           <a href="https://www.facebook.com/groups/336080777831297" target="_blank" title="See our FaceBook Page">
             <i class="fa fa-facebook" aria-hidden="true"></i>
           </a>
-          <a href="https://wa.me/+27643328857" target="_blank"></a>
+          <a href="https://wa.me/+27643328857" target="_blank">
             <i class="fa fa-whatsapp" aria-hidden="true" title="Chat with us on WhatsApp"></i>
           </a>
         </div>
