--- a/gallery.html
+++ b/gallery.html
@@ -21,14 +21,14 @@
         <ul class="navmenu">
           <li class="menu-item"><a href="index.html" class="menu-item-link">Home</a></li>
           <li class="menu-item"><a href="about.html" class="menu-item-link">About</a></li>
-          <li class="menu-item active"><a href="bookings.html" class="menu-item-link">Bookings</a></li>
-          <li class="menu-item"><a href="gallery.html" class="menu-item-link">Gallery</a></li>
+          <li class="menu-item"><a href="bookings.html" class="menu-item-link">Bookings</a></li>
+          <li class="menu-item active"><a href="gallery.html" class="menu-item-link">Gallery</a></li>
         </ul>
         <div class="social">
           <a href="https://www.facebook.com/groups/336080777831297" target="_blank" title="See our FaceBook Page">
             <i class="fa fa-facebook" aria-hidden="true"></i>
           </a>
-          <a href="https://wa.me/+27643328857" target="_blank"></a>
+          <a href="https://wa.me/+27643328857" target="_blank">
             <i class="fa fa-whatsapp" aria-hidden="true" title="Chat with us on WhatsApp"></i>
           </a>
         </div>
