--- a/bookings.html
+++ b/bookings.html
@@ -6,45 +6,85 @@
     <title>Remellie's | Bookings</title>
     <meta name="" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://kit.fontawesome.com/21371eed37.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/jpg" sizes="32x32" href="">
+    <link rel="icon" type="image/jpg" sizes="32x32" href="img/paw-print_small.png">
     <link rel="stylesheet" href="css/main.css">
     </head>
   <body>
-    <img src="" alt="">
 
-    <header>
-      <div class="navbar-container">
+    <header class="container mt-3">
+      <div class="container navbar-container">
         <h1 class="navbar-heading">
-          <span class="span-one">Remellie's</span>
-          <span class="span-two">Doggie Parlour</span>
+          <span class="container span-one">Remellie's</span>
+          <span class="container span-two">Doggie Parlour</span>
         </h1>
-        <ul class="navmenu">
+        <ul class="container text-center pb-2 navmenu">
           <li class="menu-item"><a href="index.html" class="menu-item-link">Home</a></li>
           <li class="menu-item"><a href="about.html" class="menu-item-link">About</a></li>
           <li class="menu-item active"><a href="bookings.html" class="menu-item-link">Bookings</a></li>
           <li class="menu-item"><a href="gallery.html" class="menu-item-link">Gallery</a></li>
         </ul>
-        <div class="social">
-          <a href="https://www.facebook.com/groups/336080777831297" target="_blank" title="See our FaceBook Page">
-            <i class="fa fa-facebook" aria-hidden="true"></i>
-          </a>
-          <a href="https://wa.me/+27643328857" target="_blank" title="Chat with us on WhatsApp">
-            <i class="fa fa-whatsapp" aria-hidden="true"></i>
-          </a>
-        </div>
       </div>
     </header>
 
-    <main>
-      <div class="menu-spacer"></div>
+    <main class="container">
+      <div class="social">
+        <a href="https://www.facebook.com/groups/336080777831297" target="_blank" title="See our FaceBook Page">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://wa.me/+27643328857" target="_blank">
+          <i class="fa fa-whatsapp" aria-hidden="true" title="Chat with us on WhatsApp"></i>
+        </a>
+      </div>
+      <div class="rdp">
+        <h2 class="rdp-bookings-heading1">Bookings</h2>'
+        <section class="container-fluid contact rdp-bookings"> 
+          <h1 class="rdp-bookings-heading2">Make A Booking</h1>
+          <form class="container form rdp-bookings-form" id="contactform" action="https://formsubmit.co/remelliesdp@gmail.com" method="POST">  
+            <div class="mb-1">
+              <label for="name" class="form-label">Name:</label>
+              <input type="text"
+                class="form-control" name="Name:&nbsp;" id="name" aria-describedby="helpId" placeholder="Enter your name and/or surname..." required>
+            </div>
+            <div class="mb-1">
+              <label for="phone" class="form-label">Phone Number:</label>
+              <input type="text"
+                class="form-control" name="Phone:&nbsp;" id="phone" aria-describedby="helpId" placeholder="Enter your phone number..." required>
+            </div>
+            <div class="mb-1">
+              <label for="email" class="form-label">Email:</label>
+              <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelpId" placeholder="Enter your email..." required>
+            </div> 
+            <div class="mb-1">
+              <label for="message" class="form-label">Message</label>
+              <textarea class="form-control" name="message" id="meassage" rows="3" placeholder="Type your message here..."></textarea>
+            </div>
+            <div class="contact__form__div__btn">
+              <button type="submit" class="btn btn-primary contact__form__div__btn--btn">Submit</button>
+            </div>         
+          </form>
+        </section>
+      </div>
       
     </main>
 
     <footer>
-      
+      <p class="disclaimer">
+        <span class="warning">**Please Note**</span>
+        <span>We do NOT offer a pick-up or collection service,</span>
+        <span>Please bring your doggie to the parlour</span>
+        <span>Thank You for your patience</span>
+      </p>
+      <div class="copyright">
+        <p>Designed and developed by 1-Guy WebDev</p>
+        <p>Copyright&nbsp;<i class="fa fa-copyright" aria-hidden="true"></i></p>
+      </div>
     </footer>
 
     <script src="js/main.js" async defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
   </body>
 </html>
