--- a/gallery.html
+++ b/gallery.html
@@ -6,8 +6,6 @@
     <title>Remellie's | Gallery</title>
     <meta name="" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://kit.fontawesome.com/21371eed37.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/jpg" sizes="32x32" href="img/paw-print_small.png">
     <link rel="stylesheet" href="css/main.css">
@@ -20,31 +18,142 @@
           <span class="container span-one">Remellie's</span>
           <span class="container span-two">Doggie Parlour</span>
         </h1>
+        <div class="social">
+          <a href="https://www.facebook.com/groups/336080777831297" target="_blank" title="See our FaceBook Page">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+          </a>
+          <a href="https://wa.me/+27643328857" target="_blank">
+            <i class="fa fa-whatsapp" aria-hidden="true" title="Chat with us on WhatsApp"></i>
+          </a>
+        </div>
         <ul class="container text-center pb-2 navmenu">
           <li class="menu-item"><a href="index.html" class="menu-item-link">Home</a></li>
           <li class="menu-item"><a href="about.html" class="menu-item-link">About</a></li>
           <li class="menu-item"><a href="bookings.html" class="menu-item-link">Bookings</a></li>
           <li class="menu-item active"><a href="gallery.html" class="menu-item-link">Gallery</a></li>
+          <li class="menu-item"><a href="sitting.html" class="menu-item-link">Sitting</a></li>
         </ul>
       </div>
     </header>
 
-    <main class="container">
-      <div class="social">
-        <a href="https://www.facebook.com/groups/336080777831297" target="_blank" title="See our FaceBook Page">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-        </a>
-        <a href="https://wa.me/+27643328857" target="_blank">
-          <i class="fa fa-whatsapp" aria-hidden="true" title="Chat with us on WhatsApp"></i>
-        </a>
-      </div>
+    <main class="gallery-main">
       <div class="rdp">
-        <h2 class="rdp-bookings">Gallery</h2>'
-        <section>
-
-        </section>
+        <h2 class="rdp-gallery">Gallery</h2>
       </div>
+
+      <!-- Creating a image carousel and modal for each image -->
       
+      <div class="row">
+        <div class="header">
+          <h3 class="title">Doggies</h3>
+          <div class="progress-bar"></div>
+        </div>
+        <div class="container">
+          <button class="handle left-handle">
+            <div class="text">&#8249;</div>
+          </button>
+          <div class="slider">
+            <img src="img/general_imgs/doggies/doggies (1).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (2).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (3).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (4).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (6).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (7).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (8).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (9).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (10).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (11).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (12).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (13).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (14).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (15).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (16).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (17).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (18).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (19).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (20).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (21).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (22).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (23).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (24).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (25).jpg" alt="">
+          </div>
+          <button class="handle right-handle">
+            <div class="text">&#8250;</div>
+          </button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="header">
+          <h3 class="title">And more doggies</h3>
+          <div class="progress-bar"></div>
+        </div>
+        <div class="container">
+          <button class="handle left-handle">
+            <div class="text">&#8249;</div>
+          </button>
+          <div class="slider">
+            <img src="img/general_imgs/doggies/doggies (26).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (27).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (28).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (29).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (30).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (31).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (32).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (33).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (34).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (35).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (36).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (37).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (38).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (39).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (40).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (41).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (42).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (43).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (44).jpg" alt="">
+            <img src="img/general_imgs/doggies/doggies (45).jpg" alt="">
+          </div>
+          <button class="handle right-handle">
+            <div class="text">&#8250;</div>
+          </button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="header">
+          <h3 class="title">And more doggies</h3>
+          <div class="progress-bar"></div>
+        </div>
+        <div class="container">
+          <button class="handle left-handle">
+            <div class="text">&#8249;</div>
+          </button>
+          <div class="slider">
+            <img src="img/general_imgs/functions/functions (1).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (2).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (3).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (4).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (5).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (6).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (7).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (8).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (9).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (10).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (11).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (12).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (13).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (14).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (15).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (16).jpg" alt="">
+            <img src="img/general_imgs/functions/functions (17).jpg" alt="">
+          </div>
+          <button class="handle right-handle">
+            <div class="text">&#8250;</div>
+          </button>
+        </div>
+      </div>
     </main>
 
     <footer>
@@ -55,13 +164,16 @@
         <span>Thank You for your patience</span>
       </p>
       <div class="copyright">
-        <p>Designed and developed by 1-Guy WebDev</p>
-        <p>Copyright&nbsp;<i class="fa fa-copyright" aria-hidden="true"></i></p>
+        <p>
+          <span>Designed and developed by</span>
+          <span>1-Guy WebDev</span>  
+          <span>Copyright<i class="fa fa-copyright" aria-hidden="true"></i></span>       
+        </p>
+        <img class="copyright-logo" src="img/1gwd_logo/1gwd-logo_clear_bg_500px.png" alt="">
       </div>
     </footer>
 
-    <script src="js/main.js" async defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
+    <script src="js/gallery_carousel.js" async defer></script>
+    <script src="js/gallery_modal.js" async defer></script>
   </body>
 </html>
