--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
           <span class="container span-one">Remellie's</span>
           <span class="container span-two">Doggie Parlour</span>
         </h1>
+        <div class="social">
+          <a href="https://www.facebook.com/groups/336080777831297" target="_blank" title="See our FaceBook Page">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+          </a>
+          <a href="https://wa.me/+27643328857" target="_blank">
+            <i class="fa fa-whatsapp" aria-hidden="true" title="Chat with us on WhatsApp"></i>
+          </a>
+        </div>
         <ul class="container text-center pb-2 navmenu">
           <li class="menu-item active"><a href="index.html" class="menu-item-link">Home</a></li>
           <li class="menu-item"><a href="about.html" class="menu-item-link">About</a></li>
           <li class="menu-item"><a href="bookings.html" class="menu-item-link">Bookings</a></li>
           <li class="menu-item"><a href="gallery.html" class="menu-item-link">Gallery</a></li>
+          <li class="menu-item"><a href="gallery.html" class="menu-item-link">Sitting</a></li>
         </ul>
       </div>
     </header>
 
     <main class="container">
-      <div class="social">
-        <a href="https://www.facebook.com/groups/336080777831297" target="_blank" title="See our FaceBook Page">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-        </a>
-        <a href="https://wa.me/+27643328857" target="_blank">
-          <i class="fa fa-whatsapp" aria-hidden="true" title="Chat with us on WhatsApp"></i>
-        </a>
-      </div>
+      
       <div class="container text-center rdp">
         <h2 class="rdp-name">Remellie's<span>Doggie Parlour</span></h2>
         <h3 class="rdp-statement">Exclusive Pet Groomers</h3>
@@ -68,7 +70,6 @@
       <div class="rdp-map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3583.6919073930476!2d27.762933414526753!3d-26.07632346511836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e959a23bde4cf57%3A0x916546703c6419ba!2s67%20Gemsbok%20St%2C%20Rant-En-Dal%2C%20Krugersdorp%2C%201751!5e0!3m2!1sen!2sza!4v1651734608685!5m2!1sen!2sza" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      
     </main>
 
     <footer>
@@ -80,15 +81,13 @@
       </p>
       <div class="copyright">
         <p>
-          <span>Designed and developed by 1-Guy WebDev</span>
-          <span>Copyright&nbsp;<i class="fa fa-copyright" aria-hidden="true"></i></span>
+          <span>Designed and developed by</span>
+          <span>1-Guy WebDev</span>  
+          <span>Copyright<i class="fa fa-copyright" aria-hidden="true"></i></span>       
         </p>
+        <img class="copyright-logo" src="img/1gwd_logo/1gwd-logo_clear_bg_500px.png" alt="">
       </div>
     </footer>
-
-    <script src="js/main.js" async defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
   </body>
 </html>
 
