--- a/gallery.html
+++ b/gallery.html
@@ -123,7 +123,7 @@
 
       <div class="row">
         <div class="header">
-          <h3 class="title">And more doggies</h3>
+          <h3 class="title">Functions</h3>
           <div class="progress-bar"></div>
         </div>
         <div class="container">
@@ -154,6 +154,61 @@
           </button>
         </div>
       </div>
+
+      <div class="row">
+        <div class="header">
+          <h3 class="title">Staff Photos</h3>
+          <div class="progress-bar"></div>
+        </div>
+        <div class="container">
+          <button class="handle left-handle">
+            <div class="text">&#8249;</div>
+          </button>
+          <div class="slider">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (1).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (2).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (3).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (4).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (5).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (6).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (7).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (8).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (9).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (10).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (11).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (12).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (13).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/staff (14).jpg" alt="">
+
+          </div>
+          <button class="handle right-handle">
+            <div class="text">&#8250;</div>
+          </button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="header">
+          <h3 class="title">Our Parlour</h3>
+          <div class="progress-bar"></div>
+        </div>
+        <div class="container">
+          <button class="handle left-handle">
+            <div class="text">&#8249;</div>
+          </button>
+          <div class="slider">
+            <img src="img/general_imgs/parlour_and_staff_imgs/rdp_parlour_imgs (1).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/rdp_parlour_imgs (2).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/rdp_parlour_imgs (3).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/rdp_parlour_imgs (4).jpg" alt="">
+            <img src="img/general_imgs/parlour_and_staff_imgs/rdp_parlour_imgs (5).jpg" alt="">
+          </div>
+          <button class="handle right-handle">
+            <div class="text">&#8250;</div>
+          </button>
+        </div>
+      </div>
+
     </main>
 
     <footer>
